--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,8 @@ jobs:
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
         with:
+          environment: Cloudflare-pages
+          secrets: CLOUDFLARE_API_TOKEN
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          preCommands: npx astro build
+          command: pages deploy ./dist --project-name=${{ secrets.CF_PAGES_PROJECT_NAME }}
