--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "format": "bunx biome lint --write"
+    "format": "biome lint --write"
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.5.2",
