--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "format": "biome lint --write"
+    "astro": "astro"
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.5.2",
