--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
         with:
+          packageManager: npm
           environment: Cloudflare-pages
           secrets: CLOUDFLARE_API_TOKEN
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
