--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,5 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           packageManager: npm
-          preCommands: npx astro build
+          preCommands: npx astro build --mode production
           command: pages deploy ./dist --project-name=${{ secrets.CF_PAGES_PROJECT_NAME }}
