--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "astro-seo": "^0.8.4"
+    "astro-seo": "^0.8.4",
+    "sass": "^1.88.0"
   }
 }
